UBERF-4449, UBERF-4343: Mention safari fix and double @ fix (#4135)

--- a/packages/theme/styles/_text-editor.scss
+++ b/packages/theme/styles/_text-editor.scss
@@ -12,8 +12,7 @@
   color: var(--theme-text-primary-color);
 
   .suggestion {
-    display: inline-flex;
-    padding: 0 .25rem;
+    padding-left: 0.25rem;
     color: var(--theme-link-color);
     background-color: var(--theme-mention-bg-color);
     border-radius: .25rem;
